refactor: use mojang official mappings